# minigrad

./: .gitignore  README.md  dune-project  minigrad.opam
lib/: dune  engine.ml  nn.ml
test/: dune  test_engine.ml  test_nn.ml
