(lang dune 3.20)

(name minigrad)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Xuanluo Qiu <xuanluo.qwq@gmail.com>")

(maintainers "Xuanluo Qiu <xuanluo.qwq@gmail.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name minigrad)
 (synopsis "A simple refactoring of micrograd")
 (description "A simple refactoring of micrograd")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
